<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Duties</string>
    <string name="nfcIconDescription">Icon_NFC</string>
    <string name="rescan">Rescan</string>
    <string name="nfcMode">NFC Mode</string>
    <string name="qrMode">QR code Mode</string>
    <string name="send">Send</string>
    <string name="info">Information</string>
    <string name="scanning">point at QR code</string>
    <string name="signIn">sign in</string>
    <string name="signUp">sign up</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="age">Birthday (ex 19901025)</string>
    <string name="password">Password</string>
    <string name="option">Option</string>
    <string name="registerCompany">Register Company</string>
    <string name="changeCompany">Change Company</string>
    <string name="startWork">Start Work</string>
    <string name="endWork">End Work</string>
    <string name="details">Details...</string>
    <string name="changeCompanyTooltip">Input company address to join</string>
    <string name="code">address</string>
    <string name="unavailableComp">address is unavailable</string>
    <string name="logout">Logout</string>
    <string name="mainRead">Mode</string>
    <string name="profile">Profile</string>
    <string name="records">Work record</string>
    <string name="from">from : </string>
    <string name="to">to : </string>
    <string name="serverURL" translatable="false">http://httpbin.org</string>
    <string name="wage">wage</string>
    <string name="email">email</string>
    <string name="phone">phone number</string>
    <string name="company">company</string>
    <string name="edit">edit</string>
    <string name="location">location</string>
    <string name="address">address</string>
    <string name="crn">crn</string>
    <string name="introduction">introduction</string>
    <string name="add">add</string>
    <string name="search">search</string>
    <string name="back">Back</string>
    <string name="compProfile">Company Profile</string>
    <string name="title_activity_main_drawer">MainActivityDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_carrier_drawer">CarrierActivityDrawer</string>
    <string name="title_activity_wage_drawer">WageActivityDrawer</string>
    <string name="title_activity_profile_drawer">ProfileActivityDrawer</string>
    <string name="Import" translatable="false">출퇴근관리</string>
    <string name="Gallery" translatable="false">자격증관리</string>
    <string name="Slideshow" translatable="false">활동내역</string>
    <string name="Tools" translatable="false">기타근무기록</string>
    <string name="Share" translatable="false">임금내역</string>
    <string name="Send" translatable="false">회사정보수정</string>
    <string name="hp" translatble="false">조이플님</string>
</resources>
