<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/infoTooltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/infoView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoTooltip" />
        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textColor="@color/Btn"
            android:textSize="20dp"
            android:textStyle="bold"
            android:background="@color/colortrans"
            android:text="@string/send" />

        <Button
            android:id="@+id/rescanBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/colortrans"
            android:text="@string/rescan"
            android:textColor="@color/Btn"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nfcModeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/colortrans"
            android:text="@string/nfcMode"
            android:textColor="@color/org1"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@android:string/cancel"
            android:background="@color/colortrans"
            android:textColor="@color/rose"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>